feat : update web sec config